// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|stories/Stories empty 1`] = `
<div
  class="css-7w6khc"
>
  <ul
    class="css-h3ek8a"
  >
    <li
      class="css-79elbk"
    >
      <span>
        <ul
          class="css-vq3qyb"
        />
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots UI|stories/Stories simple 1`] = `
<div
  class="css-7w6khc"
>
  <ul
    class="css-h3ek8a"
  >
    <li
      class="css-79elbk"
    >
      <span>
        <ul
          class="css-vq3qyb"
        >
          <li
            class="css-79elbk"
          >
            <div
              data-name="a"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentcolor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="css-1si3szf"
                >
                  <div
                    class="css-h8sbw5"
                  >
                    a
                  </div>
                </div>
              </div>
            </div>
            <span />
          </li>
          <li
            class="css-79elbk"
          >
            <div
              data-name="b"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentcolor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="css-1si3szf"
                >
                  <div
                    class="css-h8sbw5"
                  >
                    b
                  </div>
                </div>
              </div>
            </div>
            <span>
              <ul
                class="css-vq3qyb"
              >
                <li
                  class="css-79elbk"
                >
                  <a
                    class="css-1jhmhe9"
                    href="?selectedKind=b&selectedStory=b1&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                  >
                    <div>
                      <div
                        class="css-1si3szf"
                      >
                        <div
                          class="css-0"
                        >
                          b1
                        </div>
                      </div>
                    </div>
                  </a>
                  <span />
                </li>
                <li
                  class="css-79elbk"
                >
                  <a
                    class="css-oato19"
                    href="?selectedKind=b&selectedStory=b2&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                  >
                    <div>
                      <div
                        class="css-1si3szf"
                      >
                        <div
                          class="css-0"
                        >
                          b2
                        </div>
                      </div>
                    </div>
                  </a>
                  <span />
                </li>
              </ul>
            </span>
          </li>
        </ul>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots UI|stories/Stories with hierarchy - hierarchySeparator is defined 1`] = `
<div
  class="css-7w6khc"
>
  <ul
    class="css-h3ek8a"
  >
    <li
      class="css-79elbk"
    >
      <span>
        <ul
          class="css-vq3qyb"
        >
          <li
            class="css-79elbk"
          >
            <div
              data-name="some"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentcolor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="css-1si3szf"
                >
                  <div
                    class="css-h8sbw5"
                  >
                    some
                  </div>
                </div>
              </div>
            </div>
            <span />
          </li>
          <li
            class="css-79elbk"
          >
            <div
              data-name="another"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentcolor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="css-1si3szf"
                >
                  <div
                    class="css-h8sbw5"
                  >
                    another
                  </div>
                </div>
              </div>
            </div>
            <span>
              <ul
                class="css-vq3qyb"
              >
                <li
                  class="css-79elbk"
                >
                  <div
                    data-name="space"
                    role="menuitem"
                    style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
                    tabindex="0"
                  >
                    <div>
                      <div
                        style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                      >
                        <div
                          style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                        >
                          <svg
                            fill="currentColor"
                            height="10"
                            preserveAspectRatio="xMidYMid meet"
                            style="vertical-align:top;fill:currentcolor"
                            viewBox="0 0 40 40"
                            width="10"
                          >
                            <g>
                              <path
                                d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-1si3szf"
                      >
                        <div
                          class="css-h8sbw5"
                        >
                          space
                        </div>
                      </div>
                    </div>
                  </div>
                  <span>
                    <ul
                      class="css-vq3qyb"
                    >
                      <li
                        class="css-79elbk"
                      >
                        <div
                          data-name="20"
                          role="menuitem"
                          style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
                          tabindex="0"
                        >
                          <div>
                            <div
                              style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                            >
                              <div
                                style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                              >
                                <svg
                                  fill="currentColor"
                                  height="10"
                                  preserveAspectRatio="xMidYMid meet"
                                  style="vertical-align:top;fill:currentcolor"
                                  viewBox="0 0 40 40"
                                  width="10"
                                >
                                  <g>
                                    <path
                                      d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                            <div
                              class="css-1si3szf"
                            >
                              <div
                                class="css-h8sbw5"
                              >
                                20
                              </div>
                            </div>
                          </div>
                        </div>
                        <span>
                          <ul
                            class="css-vq3qyb"
                          >
                            <li
                              class="css-79elbk"
                            >
                              <a
                                class="css-1jhmhe9"
                                href="?selectedKind=another.space.20&selectedStory=b1&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                              >
                                <div>
                                  <div
                                    class="css-1si3szf"
                                  >
                                    <div
                                      class="css-0"
                                    >
                                      b1
                                    </div>
                                  </div>
                                </div>
                              </a>
                              <span />
                            </li>
                            <li
                              class="css-79elbk"
                            >
                              <a
                                class="css-oato19"
                                href="?selectedKind=another.space.20&selectedStory=b2&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                              >
                                <div>
                                  <div
                                    class="css-1si3szf"
                                  >
                                    <div
                                      class="css-0"
                                    >
                                      b2
                                    </div>
                                  </div>
                                </div>
                              </a>
                              <span />
                            </li>
                          </ul>
                        </span>
                      </li>
                    </ul>
                  </span>
                </li>
              </ul>
            </span>
          </li>
        </ul>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots UI|stories/Stories with highlighting when storiesFilter is provided 1`] = `
<div
  class="css-7w6khc"
>
  <ul
    class="css-h3ek8a"
  >
    <li
      class="css-79elbk"
    >
      <span>
        <ul
          class="css-vq3qyb"
        >
          <li
            class="css-79elbk"
          >
            <div
              data-name="another"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentcolor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="css-1si3szf"
                >
                  <div
                    class="css-h8sbw5"
                  >
                    <span>
                      ano
                    </span>
                    <strong
                      style="background-color:#FFFEAA;font-weight:inherit"
                    >
                      th
                    </strong>
                    <span>
                      er
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <span>
              <ul
                class="css-vq3qyb"
              >
                <li
                  class="css-79elbk"
                >
                  <div
                    data-name="space"
                    role="menuitem"
                    style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
                    tabindex="0"
                  >
                    <div>
                      <div
                        style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                      >
                        <div
                          style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                        >
                          <svg
                            fill="currentColor"
                            height="10"
                            preserveAspectRatio="xMidYMid meet"
                            style="vertical-align:top;fill:currentcolor"
                            viewBox="0 0 40 40"
                            width="10"
                          >
                            <g>
                              <path
                                d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-1si3szf"
                      >
                        <div
                          class="css-h8sbw5"
                        >
                          space
                        </div>
                      </div>
                    </div>
                  </div>
                  <span>
                    <ul
                      class="css-vq3qyb"
                    >
                      <li
                        class="css-79elbk"
                      >
                        <div
                          data-name="20"
                          role="menuitem"
                          style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
                          tabindex="0"
                        >
                          <div>
                            <div
                              style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                            >
                              <div
                                style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                              >
                                <svg
                                  fill="currentColor"
                                  height="10"
                                  preserveAspectRatio="xMidYMid meet"
                                  style="vertical-align:top;fill:currentcolor"
                                  viewBox="0 0 40 40"
                                  width="10"
                                >
                                  <g>
                                    <path
                                      d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                            <div
                              class="css-1si3szf"
                            >
                              <div
                                class="css-h8sbw5"
                              >
                                20
                              </div>
                            </div>
                          </div>
                        </div>
                        <span>
                          <ul
                            class="css-vq3qyb"
                          >
                            <li
                              class="css-79elbk"
                            >
                              <a
                                class="css-1jhmhe9"
                                href="?selectedKind=another.space.20&selectedStory=b1&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                              >
                                <div>
                                  <div
                                    class="css-1si3szf"
                                  >
                                    <div
                                      class="css-0"
                                    >
                                      b1
                                    </div>
                                  </div>
                                </div>
                              </a>
                              <span />
                            </li>
                            <li
                              class="css-79elbk"
                            >
                              <a
                                class="css-oato19"
                                href="?selectedKind=another.space.20&selectedStory=b2&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                              >
                                <div>
                                  <div
                                    class="css-1si3szf"
                                  >
                                    <div
                                      class="css-0"
                                    >
                                      b2
                                    </div>
                                  </div>
                                </div>
                              </a>
                              <span />
                            </li>
                          </ul>
                        </span>
                      </li>
                    </ul>
                  </span>
                </li>
              </ul>
            </span>
          </li>
        </ul>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots UI|stories/Stories without hierarchy - hierarchySeparator is defined 1`] = `
<div
  class="css-7w6khc"
>
  <ul
    class="css-h3ek8a"
  >
    <li
      class="css-79elbk"
    >
      <span>
        <ul
          class="css-vq3qyb"
        >
          <li
            class="css-79elbk"
          >
            <div
              data-name="some.name.item1"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentcolor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="css-1si3szf"
                >
                  <div
                    class="css-h8sbw5"
                  >
                    some.name.item1
                  </div>
                </div>
              </div>
            </div>
            <span />
          </li>
          <li
            class="css-79elbk"
          >
            <div
              data-name="another.space.20"
              role="menuitem"
              style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
              tabindex="0"
            >
              <div>
                <div
                  style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                >
                  <div
                    style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                  >
                    <svg
                      fill="currentColor"
                      height="10"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align:top;fill:currentcolor"
                      viewBox="0 0 40 40"
                      width="10"
                    >
                      <g>
                        <path
                          d="m23.3 20l-13.1-13.6c-0.3-0.3-0.3-0.9 0-1.2l2.4-2.4c0.3-0.3 0.9-0.4 1.2-0.1l16 16.7c0.1 0.1 0.2 0.4 0.2 0.6s-0.1 0.5-0.2 0.6l-16 16.7c-0.3 0.3-0.9 0.3-1.2 0l-2.4-2.5c-0.3-0.3-0.3-0.9 0-1.2z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <div
                  class="css-1si3szf"
                >
                  <div
                    class="css-h8sbw5"
                  >
                    another.space.20
                  </div>
                </div>
              </div>
            </div>
            <span>
              <ul
                class="css-vq3qyb"
              >
                <li
                  class="css-79elbk"
                >
                  <a
                    class="css-1jhmhe9"
                    href="?selectedKind=another.space.20&selectedStory=b1&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                  >
                    <div>
                      <div
                        class="css-1si3szf"
                      >
                        <div
                          class="css-0"
                        >
                          b1
                        </div>
                      </div>
                    </div>
                  </a>
                  <span />
                </li>
                <li
                  class="css-79elbk"
                >
                  <a
                    class="css-oato19"
                    href="?selectedKind=another.space.20&selectedStory=b2&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                  >
                    <div>
                      <div
                        class="css-1si3szf"
                      >
                        <div
                          class="css-0"
                        >
                          b2
                        </div>
                      </div>
                    </div>
                  </a>
                  <span />
                </li>
              </ul>
            </span>
          </li>
        </ul>
      </span>
    </li>
  </ul>
</div>
`;
